--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(wDVR)
 enable_language(Fortran)
 set(CMAKE_Fortran_COMPILER "ifort")
 set(CMAKE_Fortran_FLAGS "-mkl")
+set(CMAKE_BUILD_TYPE Release)
 
 file(GLOB_RECURSE sources src/*.f90)
 
